// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Output Test Suite > Command: <check> > should match snapshot 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔦 Checking upgrade with id: 1709067445-protodanksharding
[90m┌───────────────────[39m[90m┬───────────────────[39m[90m┬───────────┐[39m
[90m│[39m[31m Directory         [39m[90m│[39m[31m File Name         [39m[90m│[39m[31m Readable? [39m[90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m ./                [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m common.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m era-stage-proofs/ [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facetCuts.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facets.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m l2Upgrade.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m mainnet2/         [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facetCuts.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facets.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m l2Upgrade.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m stage2/           [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facetCuts.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facets.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m l2Upgrade.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m testnet-sepolia/  [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facetCuts.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facets.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m l2Upgrade.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m testnet2/         [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facetCuts.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m facets.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m l2Upgrade.json    [90m│[39m    ✅     [90m│[39m
[90m├───────────────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m                   [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m└───────────────────[39m[90m┴───────────────────[39m[90m┴───────────┘[39m
🔦 Checking upgrade with id: 1234
[{"constant":true,"inputs":[],"name":"name","outputs":[{"name":"","type":"string"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":false,"inputs":[{"name":"guy","type":"address"},{"name":"wad","type":"uint256"}],"name":"approve","outputs":[{"name":"","type":"bool"}],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":true,"inputs":[],"name":"totalSupply","outputs":[{"name":"","type":"uint256"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":false,"inputs":[{"name":"src","type":"address"},{"name":"dst","type":"address"},{"name":"wad","type":"uint256"}],"name":"transferFrom","outputs":[{"name":"","type":"bool"}],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":false,"inputs":[{"name":"wad","type":"uint256"}],"name":"withdraw","outputs":[],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":true,"inputs":[],"name":"decimals","outputs":[{"name":"","type":"uint8"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":true,"inputs":[{"name":"","type":"address"}],"name":"balanceOf","outputs":[{"name":"","type":"uint256"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":true,"inputs":[],"name":"symbol","outputs":[{"name":"","type":"string"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":false,"inputs":[{"name":"dst","type":"address"},{"name":"wad","type":"uint256"}],"name":"transfer","outputs":[{"name":"","type":"bool"}],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":false,"inputs":[],"name":"deposit","outputs":[],"payable":true,"stateMutability":"payable","type":"function"},{"constant":true,"inputs":[{"name":"","type":"address"},{"name":"","type":"address"}],"name":"allowance","outputs":[{"name":"","type":"uint256"}],"payable":false,"stateMutability":"view","type":"function"},{"payable":true,"stateMutability":"payable","type":"fallback"},{"anonymous":false,"inputs":[{"indexed":true,"name":"src","type":"address"},{"indexed":true,"name":"guy","type":"address"},{"indexed":false,"name":"wad","type":"uint256"}],"name":"Approval","type":"event"},{"anonymous":false,"inputs":[{"indexed":true,"name":"src","type":"address"},{"indexed":true,"name":"dst","type":"address"},{"indexed":false,"name":"wad","type":"uint256"}],"name":"Transfer","type":"event"},{"anonymous":false,"inputs":[{"indexed":true,"name":"dst","type":"address"},{"indexed":false,"name":"wad","type":"uint256"}],"name":"Deposit","type":"event"},{"anonymous":false,"inputs":[{"indexed":true,"name":"src","type":"address"},{"indexed":false,"name":"wad","type":"uint256"}],"name":"Withdrawal","type":"event"}]
"
`;

exports[`CLI Output Test Suite > Command: <check> > should support absolute paths 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔦 Checking upgrade with id: test-upgrade-mini
[90m┌───────────[39m[90m┬───────────────────[39m[90m┬───────────┐[39m
[90m│[39m[31m Directory [39m[90m│[39m[31m File Name         [39m[90m│[39m[31m Readable? [39m[90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m ./        [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m           [90m│[39m common.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m mainnet2/ [90m│[39m                   [90m│[39m           [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m           [90m│[39m crypto.json       [90m│[39m    ✅     [90m│[39m
[90m├───────────[39m[90m┼───────────────────[39m[90m┼───────────┤[39m
[90m│[39m           [90m│[39m transactions.json [90m│[39m    ✅     [90m│[39m
[90m└───────────[39m[90m┴───────────────────[39m[90m┴───────────┘[39m
🔦 Checking upgrade with id: 1234
[{"constant":true,"inputs":[],"name":"name","outputs":[{"name":"","type":"string"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":false,"inputs":[{"name":"guy","type":"address"},{"name":"wad","type":"uint256"}],"name":"approve","outputs":[{"name":"","type":"bool"}],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":true,"inputs":[],"name":"totalSupply","outputs":[{"name":"","type":"uint256"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":false,"inputs":[{"name":"src","type":"address"},{"name":"dst","type":"address"},{"name":"wad","type":"uint256"}],"name":"transferFrom","outputs":[{"name":"","type":"bool"}],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":false,"inputs":[{"name":"wad","type":"uint256"}],"name":"withdraw","outputs":[],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":true,"inputs":[],"name":"decimals","outputs":[{"name":"","type":"uint8"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":true,"inputs":[{"name":"","type":"address"}],"name":"balanceOf","outputs":[{"name":"","type":"uint256"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":true,"inputs":[],"name":"symbol","outputs":[{"name":"","type":"string"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":false,"inputs":[{"name":"dst","type":"address"},{"name":"wad","type":"uint256"}],"name":"transfer","outputs":[{"name":"","type":"bool"}],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":false,"inputs":[],"name":"deposit","outputs":[],"payable":true,"stateMutability":"payable","type":"function"},{"constant":true,"inputs":[{"name":"","type":"address"},{"name":"","type":"address"}],"name":"allowance","outputs":[{"name":"","type":"uint256"}],"payable":false,"stateMutability":"view","type":"function"},{"payable":true,"stateMutability":"payable","type":"fallback"},{"anonymous":false,"inputs":[{"indexed":true,"name":"src","type":"address"},{"indexed":true,"name":"guy","type":"address"},{"indexed":false,"name":"wad","type":"uint256"}],"name":"Approval","type":"event"},{"anonymous":false,"inputs":[{"indexed":true,"name":"src","type":"address"},{"indexed":true,"name":"dst","type":"address"},{"indexed":false,"name":"wad","type":"uint256"}],"name":"Transfer","type":"event"},{"anonymous":false,"inputs":[{"indexed":true,"name":"dst","type":"address"},{"indexed":false,"name":"wad","type":"uint256"}],"name":"Deposit","type":"event"},{"anonymous":false,"inputs":[{"indexed":true,"name":"src","type":"address"},{"indexed":false,"name":"wad","type":"uint256"}],"name":"Withdrawal","type":"event"}]
"
`;

exports[`CLI Output Test Suite > Command: <list> > should match snapshot 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔎 Checking directories in reference for upgrades...
[90m┌─────────────────────[39m[90m┬─────────────[39m[90m┬──────────────────[39m[90m┬────────────[39m[90m┬────────────────────────────────┐[39m
[90m│[39m[31m Name                [39m[90m│[39m[31m Is Upgrade? [39m[90m│[39m[31m Protocol Version [39m[90m│[39m[31m Created at [39m[90m│[39m[31m Directory                      [39m[90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m protodanksharding   [90m│[39m Yes         [90m│[39m 21               [90m│[39m 2024-02-27 [90m│[39m 1709067445-protodanksharding   [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m v1.4.2-enchancement [90m│[39m Yes         [90m│[39m 22               [90m│[39m 2024-03-12 [90m│[39m 1710255954-v1.4.2-enchancement [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m mini-test           [90m│[39m Yes         [90m│[39m 1337             [90m│[39m 2024-04-10 [90m│[39m test-upgrade-mini              [90m│[39m
[90m└─────────────────────[39m[90m┴─────────────[39m[90m┴──────────────────[39m[90m┴────────────[39m[90m┴────────────────────────────────┘[39m
"
`;

exports[`CLI Output Test Suite > Command: <list> > should not display table when no upgrades found 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔎 Checking directories in ./ for upgrades...
ℹ️  No upgrades found in current directory.
"
`;

exports[`CLI Output Test Suite > Command: <list> > should support absolute paths 1`] = `
"

 [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m╗[39m [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m [31m███[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██████[39m[90m╗ [39m
 [90m╚══[39m[31m███[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔════╝[39m [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m████[39m[90m╗[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔════╝[39m     [31m██[39m[90m╔════╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m  ███[39m[90m╔╝ [39m [31m█████[39m[90m╔╝ [39m [31m███████[39m[90m╗[39m [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m╔[39m[31m██[39m[90m╗[39m[31m ██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m█████[39m[90m╗  [39m [31m██████[39m[90m╔╝[39m
  [31m███[39m[90m╔╝  [39m [31m██[39m[90m╔═[39m[31m██[39m[90m╗ [39m [90m╚════[39m[31m██[39m[90m║[39m [90m  ╚[39m[31m██[39m[90m╔╝  [39m [31m██[39m[90m║╚[39m[31m██[39m[90m╗[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m     [31m██[39m[90m╔══╝  [39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m╗[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║ ╚[39m[31m████[39m[90m║[39m [90m╚[39m[31m██████[39m[90m╗[39m     [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m   ╚═╝   [39m [90m╚═╝  ╚═══╝[39m [90m ╚═════╝[39m     [90m╚══════╝[39m [90m╚═╝  ╚═╝[39m

  [31m█████[39m[90m╗[39m 
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m
 [31m███████[39m[90m║[39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m
 [90m╚═╝  ╚═╝[39m

     [31m██[39m[90m╗[39m[31m   ██[39m[90m╗[39m  [31m█████[39m[90m╗[39m  [31m██[39m[90m╗     [39m [31m██[39m[90m╗[39m [31m██████[39m[90m╗ [39m  [31m█████[39m[90m╗[39m  [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m
     [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m╚[39m[31m██[39m[90m╗[39m[31m ██[39m[90m╔╝[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m██[39m[90m║     [39m [31m██[39m[90m║[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m██[39m[90m╔══[39m[31m██[39m[90m║[39m [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m
     [90m ╚[39m[31m████[39m[90m╔╝ [39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m███████[39m[90m╗[39m [31m██[39m[90m║[39m [31m██████[39m[90m╔╝[39m [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m
     [90m  ╚═══╝  [39m [90m╚═╝  ╚═╝[39m [90m╚══════╝[39m [90m╚═╝[39m [90m╚═════╝ [39m [90m╚═╝  ╚═╝[39m [90m   ╚═╝   [39m [90m ╚═════╝ [39m

 [31m██████[39m[90m╗ [39m     [31m████████[39m[90m╗[39m  [31m██████[39m[90m╗ [39m  [31m██████[39m[90m╗ [39m [31m██[39m[90m╗     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [90m╚══[39m[31m██[39m[90m╔══╝[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m╔═══[39m[31m██[39m[90m╗[39m [31m██[39m[90m║     [39m
 [31m██████[39m[90m╔╝[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m╔══[39m[31m██[39m[90m╗[39m     [31m   ██[39m[90m║   [39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║[39m[31m   ██[39m[90m║[39m [31m██[39m[90m║     [39m
 [31m██[39m[90m║[39m[31m  ██[39m[90m║[39m     [31m   ██[39m[90m║   [39m [90m╚[39m[31m██████[39m[90m╔╝[39m [90m╚[39m[31m██████[39m[90m╔╝[39m [31m███████[39m[90m╗[39m
 [90m╚═╝  ╚═╝[39m     [90m   ╚═╝   [39m [90m ╚═════╝ [39m [90m ╚═════╝ [39m [90m╚══════╝[39m


🔎 Checking directories in reference for upgrades...
[90m┌─────────────────────[39m[90m┬─────────────[39m[90m┬──────────────────[39m[90m┬────────────[39m[90m┬────────────────────────────────┐[39m
[90m│[39m[31m Name                [39m[90m│[39m[31m Is Upgrade? [39m[90m│[39m[31m Protocol Version [39m[90m│[39m[31m Created at [39m[90m│[39m[31m Directory                      [39m[90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m protodanksharding   [90m│[39m Yes         [90m│[39m 21               [90m│[39m 2024-02-27 [90m│[39m 1709067445-protodanksharding   [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m v1.4.2-enchancement [90m│[39m Yes         [90m│[39m 22               [90m│[39m 2024-03-12 [90m│[39m 1710255954-v1.4.2-enchancement [90m│[39m
[90m├─────────────────────[39m[90m┼─────────────[39m[90m┼──────────────────[39m[90m┼────────────[39m[90m┼────────────────────────────────┤[39m
[90m│[39m mini-test           [90m│[39m Yes         [90m│[39m 1337             [90m│[39m 2024-04-10 [90m│[39m test-upgrade-mini              [90m│[39m
[90m└─────────────────────[39m[90m┴─────────────[39m[90m┴──────────────────[39m[90m┴────────────[39m[90m┴────────────────────────────────┘[39m
"
`;
